fix: add align-items

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -8,5 +8,6 @@ footer{
         display: flex;
         width: 100%;
         justify-content: space-evenly;
+        align-items: center;
     }
 }
